# arm_gcc_compile_config

./: .gitignore  LICENSE  install.bat
arm_gcc_compile_config_required_tools/: add_make.ps1
demos/blank_template/: CMakeLists.txt
demos/blank_template/code/firmware/CMSIS/GD/GD32F4xx/Include/: gd32f4xx.h  gd32f4xx_libopt.h  system_gd32f4xx.h
demos/blank_template/code/firmware/CMSIS/GD/GD32F4xx/Source/: system_gd32f4xx.c
demos/blank_template/code/firmware/GD32F4xx_standard_peripheral/Include/: gd32f4xx_gpio.h  gd32f4xx_pmu.h  gd32f4xx_rcu.h  gd32f4xx_usart.h
demos/blank_template/code/firmware/GD32F4xx_standard_peripheral/Source/: gd32f4xx_gpio.c  gd32f4xx_pmu.c  gd32f4xx_rcu.c  gd32f4xx_usart.c
demos/blank_template/code/inc/bsp/: bsp_uart.h
demos/blank_template/code/inc/freertos/: FreeRTOSConfig.h
demos/blank_template/code/src/application/: main.c
demos/blank_template/code/src/bsp/: bsp_uart.c
demos/blank_template/project_config/: demo_project.h.in  source_file_config.cmake
linker/: linker.cmake  linker.in
mcu_targets/: GD32F470VGT6.cmake  error_msg.cmake  target_device.cmake
mcu_targets/gd32/gd32f4/gd32f407/: startup_gd32f407_427.S
mcu_targets/gd32/gd32f4/gd32f470/: startup_gd32f450_470.S
mcu_targets/system/: syscalls.c
vscode_config/: launch.json.in  vscode_config.cmake
